@@ -18,6 +18,8 @@ USER-VISIBLE CHANGES
     contrast with FLQuant. Objects do not need to have iter=1 to be extended, but only
     if fill.iter=FALSE.
   - improved selection and replacement for FLPar.
+  - rnorm for mean=missing and sd=missing are now defined, Default values are 0 and 1
+    respectively.
 
 BUG FIXES
   - FS#2 - FLCohort breaks for a single age quant.
